# cpp-traffic-system-sim

./: CMakeLists.txt  README.md  TODO.md
include/: graphics.h  intersection.h  street.h  traffic_light.h  traffic_object.h  vehicle.h
src/: graphics.cpp  intersection.cpp  main.cpp  street.cpp  traffic_light.cpp  traffic_object.cpp  vehicle.cpp
test/: CMakeLists.txt  test_main.cpp  test_traffic_light.cpp  test_vehicle.cpp
tests/: CMakeLists.txt  test_.cpp  test_graphics.cpp  test_intersection.cpp  test_traffic_object.cpp
